--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,62 @@
     margin: auto;
 }
 
+.float-left {
+    float: left;
+}
+
+.clearfix::after {
+content: '';
+display: table;
+clear: both;
+}
+
 /* header */
 
 .hdr {
-    height: 80px;
+    height: 140px;
     margin: 30px auto;
-    background-color: rgb(224, 119, 202);
+    background-color: rgb(235, 104, 206);
 }
 
+/* main */
+
 .main-content {
-    height: 320px;
+    height: 500px;
     margin: 30px auto;
-    background-color: goldenrod;
+    background-color: rgb(211, 223, 52);
+}
+
+.sezione2 {
+    background-color: blue;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+}
+
+.row {
+    height: 80px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    background-color: lightblue;
+}
+
+.slim-column {
+    height: 630px;
+    width: 20%;
+    background-color: lightblue;
+}
+
+.large-colum {
+    height: 630px;
+    width: calc(60% - 40px);
+    background-color: lightblue;
+    margin: auto 20px;
+}
+
+/* footer */
+
+.ftr {
+    height: 60px;
+    background-color: rgb(174, 0, 255);
 }
